--- a/css/style_v.css
+++ b/css/style_v.css
@@ -1061,12 +1061,21 @@ td{
     padding: 20px!important;
   }
   .animacion-plan {
-      width: 250px;
+     
+            
+      width: 500px;
       position: relative;
-      left: 100px;
+      height: 250px;
+      right: 50px;
       top: -85px;
       margin-right: 10%;
   }
+  .sura-ofrecimiento .banner-background {
+    background-image: url('../img/background-responsive.png');
+  }
+
+
+  
 
   .icon-right{
     top: 0;
@@ -1273,6 +1282,7 @@ section.content ul li{
   border-radius: 2px;
     height: 37px;
     width: 200px;
+
     background-color: #E3E829;
     color: #0033A0!important;
     text-transform: uppercase;
