arreglado el bug de precios y el modal para revision

--- a/css/style_v.css
+++ b/css/style_v.css
@@ -813,6 +813,19 @@ td{
   -moz-box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.3);
   box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.3);
 }
+.modal-dialog {
+  position: fixed;
+  width: 780px;
+  max-width: 70%;
+  margin: 10px;
+  top: 20px;
+  left: 250px;
+  right: 0;
+  bottom: 0;
+}
+.modal-dialog .close {
+  font-size: 20px;
+}
 .table-cubre th {
   background: #F0F0F0!important;
   text-align: center;
